Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.3 ():
==========================================================================

libmikmod 3.3.3 was released on 12-Oct-2013.
This is a minor bug fix/maintenance release.

- Fixed a small memory leak in samples freeing (thanks to S. Michel.)
- Fixed calling the previous position while at position 0 resulting
  in an invalid read. (noticed while running mikmod under valgrind.)
- Provided new Visual Studio 6 and Visual Studio 2005 project files.
  The latter imports into newer Visual Studio versions, e.g. VS2012.


Summary of changes between libmikmod 3.2.0 and libmikmod 3.3.2 ():
==========================================================================

libmikmod 3.3.2 was released on 05-Oct-2013.

This is a serious bug fix release after the previous 3.2.0 series, with
some additional new features. All who are using libmikmod-3.2.0 (or the
interim 3.3.1-beta) must upgrade to the new libmikmod-3.3.2 version.

THANKS

- Paul Spark <sparkynz74@gmail.com> for Microsoft Visual C 6.0 fixes.
- Ozkan Sezer: many changes.

NEW FEATURES

- New CMake build system.
- Updated configury, support for cross-compilation, support for building
  in a separate directory, support latest autotools.
- New SDL driver - works both with SDL-1.2.x and with SDL2, supports
  floating point output if compiled against SDL2.
- New OpenAL driver, originally suggested by 'kervala', with fixes and
  updates and with floating point output support.
- The multi-platform SDL and OpenAL drivers, if they are compiled, have
  priority over OS-specific hw drivers for MikMod_RegisterAllDrivers().
- New windows xaudio2 driver, originally suggested by 'honza.c', with
  updates, xaudio2.8 support and with floating point output support.
- ALSA driver now supports only the contemporary ALSA 1.0.x versions.
  All of the ancient ALSA 0.3.x-0.4.x code were removed.
- Floating point output mode support for ALSA, OSS, Direct Sound, WinMM