@@ -4,6 +4,7 @@ Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.3 ():
 libmikmod 3.3.3 was released on 12-Oct-2013.
 This is a minor bug fix/maintenance release.
 
+- AIFF file writer now silently ignores and clears float output mode.
 - Fixed a small memory leak in samples freeing (thanks to S. Michel.)
 - Fixed calling the previous position while at position 0 resulting
   in an invalid read. (noticed while running mikmod under valgrind.)
